--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Spotify clone</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<form class="sidebar" method="post" style="transform: translate(5%,0%);"> 
